--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         
                 </div>
         <!-- col -->
-        <div class="col-sm-4"><img class="bgimage-three" src="img/IMG_2734a.JPG" alt="eli-in-office"></div> 
+        <div class="col-sm-4"><img class="bgimage-three" src="img/IMG_2734a.jpg" alt="eli-in-office"></div> 
         </div>
         <!-- row -->
         <div class="row">
@@ -355,7 +355,7 @@
             <!-- accordion -->
             </div>
             <!-- col -->
-        <div class="col-sm-4"><img class="bgimage-three" src="img/IMG_2650a.JPG" alt="eli-in-office"></div>    
+        <div class="col-sm-4"><img class="bgimage-three" src="img/IMG_2650a.jpg" alt="eli-in-office"></div>    
         </div>
             <!-- row -->
         </div>
