--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="row">
                 <div class="col-sm-8">
                         <!-- <img class="bgimage-three" src="img/IMG_2650a.JPG" alt="eli-in-office">     -->
-                <p>My work is regularly updated on my <a href="https://www.youtube.com/user/elifieldsteel" target="_blank">YouTube</a> channel. Links to specific works categorized by performance type are provided below.</p>
+                <p>My work is regularly updated on my <a href="https://www.youtube.com/user/elifieldsteel" target="_blank">YouTube</a> channel. Links to specific works categorized by performance type are provided below. If you are interested in purchasing a score or commissioning a piece by me, please <a href="mailto:eli.fieldsteel@gmail.com">email</a> or use the contact form at the bottom of this page.</p>
                 
             </div>
            <!-- END COLUMN -->
